# mp4_transcription

./: .env.example  .gitignore  README.md  pyproject.toml
mp4_transcription/: main.py  segment_processor.py  transcriber.py  translate.py  translator.py  vtt_parser.py  vtt_writer.py
